--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
       </div>
     </nav>
 
-    <main id="main">
-      <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause=“false” style="padding-top: 6%;">
-        <div class="carousel-inner">
+    <section id="main">
+        <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause=“false” style="padding-top: 6%;">
+        <div class="carousel-inner d-none d-md-block">
           <div class="carousel-item active">
             <img src="quirquincho.png" class="d-block w-100" alt="quirquincho">
           </div>
@@ -62,22 +62,29 @@
           </div>
         </div>
         <div class="overlay">
-          <div class="container">
+          <div class="container-fluid">
             <div class="row align-items-center">
               <div class="col-md-6 text-center">
-                <img src="./3ndemic (7).png" alt="" class="img-fluid">
+                <br>
+                <br>
+                <br>
+                <img src="./3ndemic (7).png" alt="">
               </div>
               <div class="col-md-6 text-center">
                 <br>
                 <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <p class="descripcion d-none d-md-block">Descubre Chile a través de tus propias garras...</p>
-                <iframe class="d-none d-md-block" width="560" height="290" src="https://www.youtube.com/embed/zt96yAGs-Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="container-fluid" width="560" height="290" src="https://www.youtube.com/embed/zt96yAGs-Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
           </div>
         </div>
       </div>
-  </main>
+    </section>
 
   <!--Contexto-->
 
@@ -98,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="imagen bg_cover fadeInLeft" style="background-image: url(./fauna-nativa-chile.jpg);">
+      <div class="imagen bg_cover fadeInLeft d-md-block d-none" style="background-image: url(./fauna-nativa-chile.jpg);">
       </div>
     </div>
   </section>
