--- a/public/visitar.html
+++ b/public/visitar.html
@@ -94,7 +94,7 @@
   <section id="visitanos">
     <div class="container-fluid">
       <div class="row justify-content-center">
-        <div class="col col-lg-6" id="ih">
+        <div class="col col-lg-6 d-none d-md-block" id="ih">
           <img src="./usm.jpeg" alt="USM">
         </div>
         <div class="col col-lg-6">
