--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="overlay">
           <div class="container-fluid">
-            <div class="row align-items-center">
+            <div class="row">
               <div class="col-md-6 text-center">
                 <br>
                 <br>
@@ -77,7 +77,7 @@
                 <br>
                 <br>
                 <br>
-                <p class="descripcion d-none d-md-block">Descubre Chile a través de tus propias garras...</p>
+                <p class="descripcion">Descubre Chile a través de tus propias garras...</p>
                 <iframe class="container-fluid" width="560" height="290" src="https://www.youtube.com/embed/zt96yAGs-Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
